examples/test/testpolicy14609.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14609
  namespace: namespace129
spec:
  podSelector:
    matchLabels:
      key42: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value18
          key49: value35
          key48: value40
      podSelector:
        matchLabels:
          key40: value6
          key19: value21
          key5: value43
